infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-api
  namespace: counter-system
spec:
  selector:
    app: counter-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
